--- a/index.html
+++ b/index.html
@@ -156,6 +156,28 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/bimodulation.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>On-the-fly Modulation for Balanced Multimodal Learning</papertitle>
+              <br>
+              <br>
+              <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, Henghui Du, Ji-Rong Wen
+              <br>
+              P.S. Thanks the valuable help from Zequn Yang
+              <br>
+              <br>
+              <em>T-PAMI</em>, 2024
+              <br>
+              TBD
+              </a>
+              <br>
+              <p>Analyze and modulate imbalanced uni-modal learning from both feed-forward and back-propagation stage.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/reinit.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -306,7 +328,7 @@
               <a href="https://dtaoo.github.io">Di Hu</a>, <strong>Yake Wei</strong>, <a href="https://shvdiwnkozbw.github.io/">Rui Qian</a>, <a href="https://weiyaolin.github.io/">Weiyao Lin</a>, <a href="https://scholar.google.com/citations?user=v5LctN8AAAAJ&hl">Ruihua Song</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>
               <br>
               <br>
-              <em>TPAMI</em>, 2021
+              <em>T-PAMI</em>, 2021
               <br>
               <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a> / <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
               </a>
