--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2024-09]</strong>  One paper accepted by T-PAMI, thanks to all co-authors!
+            </p>
+            <p>
               <strong>[2024-07]</strong> Gave a talk about "Balanced multimodal learning" @ TechBeat! <a href="https://www.techbeat.net/talk-info?id=887">[Record]</a>
             </p>
             <p>
@@ -82,7 +85,7 @@
               <strong>[2022-03]</strong> Two papers accepted by CVPR, thanks to all co-authors!
             </p>
             <p>
-              <strong>[2021-12]</strong> One paper accepted by TPAMI, thanks to all co-authors!
+              <strong>[2021-12]</strong> One paper accepted by T-PAMI, thanks to all co-authors!
             </p>
             <p>
               <strong>[2021-06]</strong> Graduate from University of Electronic Science and Technology of China (UESTC)!
