--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
-            <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022, ICCV 2023, AAAI 2023-2024
+            <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
           </p>
           <p>
             <strong>Journal Reviewer:</strong> TMM, TPAMI, TCSVT
@@ -172,7 +172,7 @@
               <br>
               <em>T-PAMI</em>, 2024
               <br>
-              TBD
+              <a href="https://ieeexplore.ieee.org/abstract/document/10694738">paper</a> / <a href="https://github.com/GeWu-Lab/BML_TPAMI2024">code
               </a>
               <br>
               <p>Analyze and modulate imbalanced uni-modal learning from both feed-forward and back-propagation stage.</p>
