--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <br>
               <em>T-PAMI</em>, 2024
               <br>
-              <a href="https://ieeexplore.ieee.org/abstract/document/10694738">paper</a> / <a href="https://github.com/GeWu-Lab/BML_TPAMI2024">code
+              <a href="https://arxiv.org/abs/2410.11582">arXiv</a> / <a href="https://github.com/GeWu-Lab/BML_TPAMI2024">code
               </a>
               <br>
               <p>Analyze and modulate imbalanced uni-modal learning from both feed-forward and back-propagation stage.</p>
