--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Yake Wei/卫雅珂</name>
+                <name>Yake WEI/卫雅珂</name>
               </p>
               <p>I am a PhD student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multi-modal learning.
               </p>
