--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/yake.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yake.jpg" class="hoverZoomLink"></a>
+              <a href="images/IMG_1772.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_1772.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -48,6 +48,12 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
+            <p>
+              <strong>[2024-11]</strong>  Gave a talk about "Balanced multimodal learning" @ Virginia Tech! Thanks the invitation from Prof. <a href="https://people.cs.vt.edu/chris/">Chris Thomas</a>!
+            </p>
+            <p>
+              <strong>[2024-11]</strong>  Gave a talk about "Balanced multimodal learning" @ Virginia Tech! Thanks the invitation from Prof. <a href="https://people.cs.vt.edu/chris/">Chris Thomas</a>!
+            </p>
             <p>
               <strong>[2024-09]</strong>  One paper accepted by T-PAMI, thanks to all co-authors!
             </p>
@@ -351,7 +357,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Sep. 2024
+                    Updated at Nov. 2024
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
