--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
-              <strong>[2024-11]</strong>  Gave a talk about "Balanced multimodal learning" @ Virginia Tech! Thanks the invitation from Prof. <a href="https://people.cs.vt.edu/chris/">Chris Thomas</a>!
+              <strong>[2024-12]</strong> Attended the Global PhD Gathering @ 2024 Pujiang AI Conference in Shanghai!
             </p>
             <p>
               <strong>[2024-11]</strong>  Gave a talk about "Balanced multimodal learning" @ Virginia Tech! Thanks the invitation from Prof. <a href="https://people.cs.vt.edu/chris/">Chris Thomas</a>!
