--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yake WEI/卫雅珂</name>
               </p>
-              <p>I am a PhD student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multi-modal learning.
+              <p>I am a Ph.D student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multi-modal learning.
               </p>
 
               <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC). Had a wondeful time with my friends in Chengdu, China from 2017-2021.
@@ -48,6 +48,12 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
+            <p>
+              <strong>[2025-02]</strong> Awarded the Baidu Scholarship (10 Ph.D students worldwide)!
+            </p>
+            <p>
+              <strong>[2024-12]</strong> Awarded the China National Scholarship for Ph.D student!
+            </p>
             <p>
               <strong>[2024-12]</strong> Attended the Global PhD Gathering @ 2024 Pujiang AI Conference in Shanghai!
             </p>
@@ -104,12 +110,27 @@
         <tbody>
         <tr>
         <td style="padding:20px;width:100%;vertical-align:middle">
+          <heading>Selected Honors</heading>
+          <p>
+            &#x2022 Baidu Scholarship <strong>(10 Ph.D students worldwide) </strong>, 2025.
+          </p>
+          <p>
+            &#x2022 China National Scholarship for Ph.D student <strong>(highest student honor in China, awarded to top 0.2%) </strong>, 2024.
+          </p>
+        </td>
+      </tr>
+    </tbody></table>
+
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tbody>
+        <tr>
+        <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
             <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
           </p>
           <p>
-            <strong>Journal Reviewer:</strong> TMM, TPAMI, TCSVT
+            <strong>Journal Reviewer:</strong> TPAMI, TMM, TCSVT
           </p>
         </td>
       </tr>
@@ -357,7 +378,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Dec. 2024
+                    Updated at Feb. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
