--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Selected Honors</heading>
           <p>
-            &#x2022 Baidu Scholarship <strong>(10 Ph.D students worldwide) </strong>, 2025.
+            &#x2022 Baidu Scholarship <strong>(10 Ph.D students worldwide) </strong>, 2024.
           </p>
           <p>
-            &#x2022 China National Scholarship for Ph.D student <strong>(highest student honor in China, awarded to top 0.2%) </strong>, 2024.
+            &#x2022 China National Scholarship for Ph.D student <strong>(highest student honor in China) </strong>, 2024.
           </p>
         </td>
       </tr>
