--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
           <p>
             &#x2022 China National Scholarship for Ph.D student <strong>(highest student honor in China) </strong>, 2024.
           </p>
+          <p>
+            &#x2022 Outstanding Graduate of Sichuan province <strong>(highest honor for graduates set by Sichuan province)</strong>, 2021.
+          </p>
+          <p>
+            &#x2022 Outstanding Graduate of University of Electronic Science and Technology of China, 2021.
+          </p>
         </td>
       </tr>
     </tbody></table>
