--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2025-03]</strong> Two paper accepted by CVPR, thanks to all co-authors!
+            </p>
+            <p>
               <strong>[2025-02]</strong> Awarded the Baidu Scholarship (10 Ph.D students worldwide)!
             </p>
             <p>
@@ -133,7 +136,7 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
-            <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
+            <strong>Conference Reviewer:</strong> CVPR 2022-2025, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
           </p>
           <p>
             <strong>Journal Reviewer:</strong> TPAMI, TMM, TCSVT
@@ -188,7 +191,46 @@
     <br>
     
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
+          <heading style="padding:20px">Publications (&#42; equal contribution)</heading>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/iar.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Adaptive Unimodal Regulation for Balanced Multimodal Information Acquisition</papertitle>
+              <br>
+              <br>
+              Chengxiang Huang*, <strong>Yake Wei*</strong>, Zequn Yang, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>CVPR</em>, 2025
+              <br>
+              TBD
+              <br>
+              <p>Analyze and modulate information acquisition process during multimodal training process.</p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/dta.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Patch Matters: Training-free Fine-grained Image Caption Enhancement via Local Perception</papertitle>
+              <br>
+              <br>
+              Ruotian Peng, Haiying He, <strong>Yake Wei</strong>, Yandong Wen, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>CVPR</em>, 2025
+              <br>
+              TBD
+              <br>
+              <p>Generate high-quality fine-grained image caption by divide-then-aggregate strategy.</p>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -384,7 +426,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Feb. 2025
+                    Updated at Mar. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
