--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="images/favicon.ico">
+	<link rel="icon" href="src/favicon.ico">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yake WEI/卫雅珂</name>
               </p>
-              <p>I am a Ph.D student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multi-modal learning.
+              <p>I am a Ph.D student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multimodal learning.
               </p>
 
               <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC). Had a wondeful time with my friends in Chengdu, China from 2017-2021.
@@ -30,14 +30,14 @@
                 <a href="mailto:yakewei@ruc.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=i9mWGA0AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <!--
-                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp  -->
-                <a href="https://github.com/echo0409/">Github</a>
+                <a href="https://github.com/echo0409/">Github</a> &nbsp/&nbsp
+                <a href="src/cv_yakewei_2025.pdf">CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/IMG_1772.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_1772.jpg" class="hoverZoomLink"></a>
+              <a href="src/IMG_1772.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="src/IMG_1772.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -52,10 +52,10 @@
               <strong>[2025-03]</strong> Two paper accepted by CVPR, thanks to all co-authors!
             </p>
             <p>
-              <strong>[2025-02]</strong> Awarded the Baidu Scholarship (10 Ph.D students worldwide)!
+              <strong>[2025-02]</strong> Awarded the <strong>Baidu Scholarship (10 Ph.D students worldwide)</strong>!
             </p>
             <p>
-              <strong>[2024-12]</strong> Awarded the China National Scholarship for Ph.D student!
+              <strong>[2024-12]</strong> Awarded the <strong>China National Scholarship for Ph.D student</strong>!
             </p>
             <p>
               <strong>[2024-12]</strong> Attended the Global PhD Gathering @ 2024 Pujiang AI Conference in Shanghai!
@@ -130,27 +130,31 @@
       </tr>
     </tbody></table>
 
-      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-        <tbody>
-        <tr>
-        <td style="padding:20px;width:100%;vertical-align:middle">
-          <heading>Services</heading>
-          <p>
-            <strong>Conference Reviewer:</strong> CVPR 2022-2025, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
-          </p>
-          <p>
-            <strong>Journal Reviewer:</strong> TPAMI, TMM, TCSVT
-          </p>
-        </td>
-      </tr>
-    </tbody></table>
+
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <tbody>
+      <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <heading>Research Highlights</heading>
+        <p>
+          Interested in the inherent learning mechanism of perceiving, formulating, and understanding the environment with heterogeneous information from multiple modalities, e.g., vision, sound, text.
+        </p>    
+        <p>
+          In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning" for the first time</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. </p>    
+          <p>Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
+          <img src="src/my_work_2025.svg" alt="clean-usnob" width="700" vertical-align:middle horizontal-align:middle>
+        </p>
+      </td>
+    </tr>
+  </tbody></table>
+
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
       <tbody>
       <heading style="padding:20px">Survey</heading>
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/avlearning.jpg" alt="clean-usnob" width="320" height="160">
+          <img src="src/avlearning.jpg" alt="clean-usnob" width="320" height="160">
         </td>
         <td width="75%" valign="middle">
           <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
@@ -169,7 +173,7 @@
 
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/low_quality.png" alt="clean-usnob" width="320" height="160">
+          <img src="src/low_quality.png" alt="clean-usnob" width="320" height="160">
         </td>
         <td width="75%" valign="middle">
           <papertitle>Multimodal Fusion on Low-quality Data: A Comprehensive Survey</papertitle>
@@ -195,7 +199,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/iar.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/iar.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Adaptive Unimodal Regulation for Balanced Multimodal Information Acquisition</papertitle>
@@ -215,7 +219,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/dta.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/dta.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Patch Matters: Training-free Fine-grained Image Caption Enhancement via Local Perception</papertitle>
@@ -234,7 +238,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/bimodulation.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/bimodulation.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>On-the-fly Modulation for Balanced Multimodal Learning</papertitle>
@@ -256,7 +260,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/reinit.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/reinit.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Diagnosing and Re-learning for Balanced Multimodal Learning</papertitle>
@@ -276,7 +280,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>MMPareto: Boosting Multimodal Learning with Innocent Unimodal Assistance</papertitle>
@@ -296,7 +300,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/sample-level.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/sample-level.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Enhancing Multimodal Cooperation via Sample-level Modality Valuation</papertitle>
@@ -316,7 +320,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mmrobust.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/mmrobust.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Quantifying and Enhancing Multi-modal Robustness with Modality Preference</papertitle>
@@ -337,7 +341,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/geometric-mvc.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/geometric-mvc.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Geometric-inspired graph-based Incomplete Multi-view Clustering</papertitle>
@@ -357,7 +361,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/balance2022.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/balance2022.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Balanced Multimodal Learning via On-the-fly Gradient Modulation</papertitle>
@@ -377,7 +381,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/avqa2022.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/avqa2022.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Learning to Answer Questions in Dynamic Audio-Visual Scenarios</papertitle>
@@ -397,7 +401,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/pami2021.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="src/pami2021.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Class-aware Sounding Objects Localization via Audiovisual Correspondence</papertitle>
@@ -417,7 +421,20 @@
 
         </tbody></table>
 
-
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Services</heading>
+            <p>
+              <strong>Conference Reviewer:</strong> CVPR 2022-2025, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
+            </p>
+            <p>
+              <strong>Journal Reviewer:</strong> T-PAMI, T-MM, TCSVT
+            </p>
+          </td>
+        </tr>
+      </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -437,9 +454,18 @@
             </td>
           </tr>
         </tbody></table>
+
+
+
+
+
+
       </td>
     </tr>
   </table>
+
+
+  
 </body>
 
 </html>
