--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
               <strong>Conference Reviewer:</strong> CVPR 2022-2025, ECCV 2022/2024, ICCV 2023, AAAI 2023-2025
             </p>
             <p>
-              <strong>Journal Reviewer:</strong> T-PAMI, T-MM, TCSVT
+              <strong>Journal Reviewer:</strong> T-PAMI, T-MM, T-CSVT
             </p>
           </td>
         </tr>
