--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!--
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp  -->
-                <a href="https://github.com/echo0409/">Github</a> &nbsp/&nbsp
+                <a href="https://github.com/echo0409/">GitHub</a> &nbsp/&nbsp
                 <a href="src/cv_yakewei_2025.pdf">CV</a> 
               </p>
             </td>
