--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
             </td>
           </tr>
 
+
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="src/bimodulation.jpg" alt="clean-usnob" width="320" height="160">
@@ -255,6 +257,26 @@
               </a>
               <br>
               <p>Analyze and modulate imbalanced uni-modal learning from both feed-forward and back-propagation stage.</p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="src/acmmma.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Enhancing Modality Representation and Alignment for Multimodal Cold-start Active Learning</papertitle>
+              <br>
+              <br>
+              Meng Shen, <strong>Yake Wei</strong>, Jianxiong Yin, Deepu Rajan, Di Hu, Simon See
+              <br>
+              <br>
+              <em>ACM MM Asia</em>, 2025
+              <br>
+              <a href="https://dl.acm.org/doi/full/10.1145/3696409.3700225">paper</a>
+              <br>
+              <p>Improve the quality of selected multimodal data pairs in active learning.</p>
             </td>
           </tr>
 
