--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2025-05]</strong> One paper accepted by ICML, thanks to all co-authors!
+            </p>
+            <p>
               <strong>[2025-03]</strong> Two paper accepted by CVPR, thanks to all co-authors!
             </p>
             <p>
@@ -199,6 +202,26 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="src/qrr.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Reviving the Cooperation Dynamics in Multimodal Transformer</papertitle>
+              <br>
+              <br>
+              Haotian Ni, <strong>Yake Wei</strong>, Hang Liu, Gong Chen, Chong Peng, Hao Lin, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>ICML</em>, 2025
+              <br>
+              TBD
+              <br>
+              <p>Rebalance the attention score and revive cooperation dynamics between modalities in Transformer.</p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="src/iar.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -210,7 +233,8 @@
               <br>
               <em>CVPR</em>, 2025
               <br>
-              TBD
+              <a href="https://arxiv.org/abs/2503.18595">arXiv</a> / <a href="https://github.com/GeWu-Lab/InfoReg_CVPR2025">code
+              </a>
               <br>
               <p>Analyze and modulate information acquisition process during multimodal training process.</p>
             </td>
@@ -230,7 +254,8 @@
               <br>
               <em>CVPR</em>, 2025
               <br>
-              TBD
+              <a href="https://arxiv.org/abs/2504.06666">arXiv</a> / <a href="https://github.com/GeWu-Lab/Patch-Matters">code
+              </a>
               <br>
               <p>Generate high-quality fine-grained image caption by divide-then-aggregate strategy.</p>
             </td>
@@ -465,7 +490,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Mar. 2025
+                    Updated at May. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
