--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2025-06]</strong> Release our new PEFT pipeline for MLLMs, MokA! <a href="https://gewu-lab.github.io/MokA/">[Project page]</a>
+            </p>
+            <p>
               <strong>[2025-05]</strong> One paper accepted by ICML, thanks to all co-authors!
             </p>
             <p>
@@ -76,7 +79,7 @@
               <strong>[2024-07]</strong> One paper accepted by ECCV, thanks to all co-authors!
             </p>
             <p>
-              <strong>[2024-05]</strong> We release a survey about fusion of low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
+              <strong>[2024-05]</strong> We release a survey about fusion of low-quality multimodal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
             </p>
             <p>
               <strong>[2024-05]</strong> One paper accepted by ICML, thanks to all co-authors!
@@ -151,6 +154,33 @@
     </tr>
   </tbody></table>
 
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <tbody>
+      <heading style="padding:20px">Pre-print</heading>
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="src/moka.svg" alt="clean-usnob" width="320" height="160">
+        </td>
+        <td width="75%" valign="middle">
+          <papertitle>MokA: Multimodal Low-Rank Adaptation for MLLMs</papertitle>
+          <br>
+          <br>
+          <strong>Yake Wei</strong>, Yu Miao, Dongzhan Zhou, <a href="https://dtaoo.github.io">Di Hu</a>
+          <br>
+          <br>
+
+          <br>
+          <a href="https://gewu-lab.github.io/MokA/">Project page</a>
+          <br>
+          <p>A new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation.</p>
+        </td>
+      </tr>
+
+
+    </tbody></table>
+
+    <br>
+
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
       <tbody>
@@ -189,7 +219,7 @@
           <br>
           <a href="https://arxiv.org/abs/2404.18947">arXiv</a> / <a href="https://github.com/QingyangZhang/awesome-low-quality-multimodal-learning">awesome list</a> 
           <br>
-          <p>A systematical survey about fusion of low-quality multi-modal data.</p>
+          <p>A systematical survey about fusion of low-quality multimodal data.</p>
         </td>
       </tr>
 
@@ -281,7 +311,7 @@
               <a href="https://arxiv.org/abs/2410.11582">arXiv</a> / <a href="https://github.com/GeWu-Lab/BML_TPAMI2024">code
               </a>
               <br>
-              <p>Analyze and modulate imbalanced uni-modal learning from both feed-forward and back-propagation stage.</p>
+              <p>Analyze and modulate imbalanced unimodal learning from both feed-forward and back-propagation stage.</p>
             </td>
           </tr>
 
@@ -321,7 +351,7 @@
               <a href="https://arxiv.org/abs/2407.09705">arXiv</a> / <a href="https://github.com/GeWu-Lab/Diagnosing_Relearning_ECCV2024">code
               </a>
               <br>
-              <p>Dynimically re-initialize uni-modal encoder to enhance both worse-learnt and well-learnt modalities.</p>
+              <p>Dynimically re-initialize unimodal encoder to enhance both worse-learnt and well-learnt modalities.</p>
             </td>
           </tr>
 
@@ -341,7 +371,7 @@
               <a href="https://arxiv.org/abs/2405.17730">arXiv</a> / <a href="https://github.com/GeWu-Lab/MMPareto_ICML2024">code
               </a>
               <br>
-              <p>Solve conflicts between multi-modal and uni-modal gradients under multi-modal scenarios.</p>
+              <p>Solve conflicts between multimodal and unimodal gradients under multimodal scenarios.</p>
             </td>
           </tr>
 
@@ -381,7 +411,7 @@
               <a href="https://arxiv.org/pdf/2402.06244.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/Certifiable-Robust-Multi-modal-Training">code
               </a>
               <br>
-              <p>Analyze essential components for multi-modal robustness and delve into the
+              <p>Analyze essential components for multimodal robustness and delve into the
                 limitations imposed by modality preference.</p>
             </td>
           </tr>
@@ -422,7 +452,7 @@
               <a href="https://arxiv.org/pdf/2203.15332.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">code
               </a>
               <br>
-              <p>Alleviate optimization imbalance in multi-modal learning via on-the-fly gradient modulation.</p>
+              <p>Alleviate optimization imbalance in multimodal learning via on-the-fly gradient modulation.</p>
             </td>
           </tr>
 
@@ -490,7 +520,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at May. 2025
+                    Updated at June. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
