--- a/index.html
+++ b/index.html
@@ -148,15 +148,21 @@
         <p>
           In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning" for the first time</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. </p>    
           <p>Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
-          <img src="src/my_work_2025.svg" alt="clean-usnob" width="700" vertical-align:middle horizontal-align:middle>
+          </p>
+        <p>
+          <strong>ONE MORE THING</strong>: We have a WeChat discussion group about balanced multimodal learning. Anyone who may be interested is welcome! <a href="https://github.com/GeWu-Lab/awesome-balanced-multimodal-learning">[Get QR Code here]</a>
         </p>
+          <img src="src/my_work_2025.svg" alt="clean-usnob" width="700" vertical-align:middle horizontal-align:middle>
+        
+
+
       </td>
     </tr>
   </tbody></table>
 
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
       <tbody>
-      <heading style="padding:20px">Pre-print</heading>
+      <heading style="padding:20px">Preprint</heading>
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
           <img src="src/moka.svg" alt="clean-usnob" width="320" height="160">
