--- a/index.html
+++ b/index.html
@@ -144,10 +144,12 @@
         <heading>Research Highlights</heading>
         <p>
           Interested in the inherent learning mechanism of perceiving, formulating, and understanding the environment with heterogeneous information from multiple modalities, e.g., vision, sound, text.
-        </p>    
+        </p>   
         <p>
-          In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning" for the first time</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. </p>    
-          <p>Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
+          <strong>Part 1. </strong> Focus on providing a \textbf{better solution for building Multimodal LLMs, caring for modality-specific characteristics}. For now, we provide a new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation. <a href="https://gewu-lab.github.io/MokA/">[MokA]</a>
+        </p> 
+        <p>
+          <strong>Part 2. </strong> In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning" for the first time</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
           </p>
         <p>
           <strong>ONE MORE THING</strong>: We have a WeChat discussion group about balanced multimodal learning. Anyone who may be interested is welcome! <a href="https://github.com/GeWu-Lab/awesome-balanced-multimodal-learning">[Get QR Code here]</a>
