--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               <strong>[2025-06]</strong> Release our new PEFT pipeline for MLLMs, MokA! <a href="https://gewu-lab.github.io/MokA/">[Project page]</a>
             </p>
             <p>
+              <strong>[2025-06]</strong> Attended student workshop @ VALSE 2025 in Zhuhai! Find the slides <a href="src/valse25_卫雅珂_final.pdf">[here]</a> 
+            </p>
+            <p>
               <strong>[2025-05]</strong> One paper accepted by ICML, thanks to all co-authors!
             </p>
             <p>
