--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a Ph.D student at <a href="https://gewu-lab.github.io/">GeWu-Lab</a>, <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. My research interests focus on multimodal learning, including multimodal learning mechanism and MLLMs.
               </p>
 
-              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC). Had a wondeful time with my friends in Chengdu, China from 2017-2021.
+              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC). Had a wondeful time with my friends in Chengdu, China, from 2017-2021.
               </p>
 
               <p style="text-align:center">
