--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           Interested in the inherent learning mechanism of perceiving, formulating, and understanding the environment with heterogeneous information from multiple modalities, e.g., vision, sound, text.
         </p>   
         <p>
-          <strong>Part 1. </strong> Focus on providing <strong>better solutions for building Multimodal LLMs</strong>, caring for modality-specific characteristics. For now, we provide a new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation. <a href="https://gewu-lab.github.io/MokA/">[MokA]</a>
+          <strong>Part 1. </strong> Focus on providing <strong>better solutions for building Multimodal LLMs</strong>, caring for modality-specific characteristics. For now, we have provided a new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation. <a href="https://gewu-lab.github.io/MokA/">[MokA]</a>
         </p> 
         <p>
           <strong>Part 2. </strong> In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning" for the first time</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
