--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2025-09]</strong> MokA is accepted by NeurIPS as an Oral paper! Thanks to all co-authors!</a>
+            </p>
+            <p>
               <strong>[2025-06]</strong> Release our new PEFT pipeline for MLLMs, MokA! <a href="https://gewu-lab.github.io/MokA/">[Project page]</a>
             </p>
             <p>
@@ -157,13 +160,13 @@
         <p>
           <strong>ONE MORE THING</strong>: We have a WeChat discussion group about balanced multimodal learning. Anyone who may be interested is welcome! <a href="https://github.com/GeWu-Lab/awesome-balanced-multimodal-learning">[Get QR Code here]</a>
         </p>
-          <img src="src/my_work_2025.svg" alt="clean-usnob" width="700" vertical-align:middle horizontal-align:middle>
+          <img src="src/2025_research_map.svg" alt="clean-usnob" width="700" vertical-align:middle horizontal-align:middle>
         
 
 
       </td>
     </tr>
-  </tbody></table>
+  <!-- </tbody></table>
 
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
       <tbody>
@@ -190,7 +193,7 @@
 
     </tbody></table>
 
-    <br>
+    <br> -->
 
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -241,12 +244,34 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications (&#42; equal contribution)</heading>
 
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="src/moka.svg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>MokA: Multimodal Low-Rank Adaptation for MLLMs</papertitle>
+              <br>
+              <br>
+              <strong>Yake Wei</strong>, Yu Miao, Dongzhan Zhou, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>NeurIPS</em>, 2025 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <br>
+              <a href="https://gewu-lab.github.io/MokA/">Project page</a>
+              <br>
+              <p>A new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation.</p>
+            </td>
+          </tr>
+
+
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="src/qrr.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Reviving the Cooperation Dynamics in Multimodal Transformer</papertitle>
+              <papertitle>RollingQ: Reviving the Cooperation Dynamics in Multimodal Transformer</papertitle>
               <br>
               <br>
               Haotian Ni, <strong>Yake Wei</strong>, Hang Liu, Gong Chen, Chong Peng, Hao Lin, <a href="https://dtaoo.github.io">Di Hu</a>
@@ -254,7 +279,7 @@
               <br>
               <em>ICML</em>, 2025
               <br>
-              TBD
+              <a href="https://arxiv.org/abs/2506.11465">arXiv</a> / <a href="https://github.com/GeWu-Lab/RollingQ_ICML2025">code</a>
               <br>
               <p>Rebalance the attention score and revive cooperation dynamics between modalities in Transformer.</p>
             </td>
@@ -531,7 +556,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at June. 2025
+                    Updated at Sep. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
