--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <strong>Yake Wei</strong>, Yu Miao, Dongzhan Zhou, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
-              <em>NeurIPS</em>, 2025 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <em>NeurIPS</em>, 2025 &nbsp <font color="red"><strong>(Oral Presentation, 1.46%)</strong></font>
               <br>
               <a href="https://gewu-lab.github.io/MokA/">Project page</a>
               <br>
@@ -483,7 +483,7 @@
               Xiaokang Peng*, <strong>Yake Wei*</strong>, <a href="https://antony0621.github.io/">Andong Deng</a>, Dong Wang, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
-              <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation, 16.57%)</strong></font>
               <br>
               <a href="https://arxiv.org/pdf/2203.15332.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">code
               </a>
@@ -503,7 +503,7 @@
               <a href="https://ayameyao.github.io/">Guangyao Li*</a>, <strong>Yake Wei*</strong>, <a href="https://yapengtian.org/">Yapeng Tian*</a>, <a href="https://www.cs.rochester.edu/~cxu22/">Chenliang Xu</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
-              <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation, 16.57%)</strong></font>
               <br>
               <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a> / <a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
               </a>
