--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp  -->
                 <a href="https://github.com/echo0409/">GitHub</a> &nbsp/&nbsp
-                <a href="src/cv_yakewei_2025.pdf">CV</a> 
+                <a href="src/cv_yakewei_2025_en.pdf">CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="src/IMG_1772.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="src/IMG_1772.jpg" class="hoverZoomLink"></a>
+              <a href="src/yake.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="src/yake.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <div id="news-container">
+              <p>
+                <strong>[2025-10]</strong> Organized the first online workshop of BML community! Thanks to TechBeat and all speakers!</a>
+              </p>
               <p>
                 <strong>[2025-09]</strong> MokA is accepted by NeurIPS as an Oral paper! Thanks to all co-authors!</a>
               </p>
@@ -157,7 +160,9 @@
           Interested in the inherent learning mechanism of perceiving, formulating, and understanding the environment with heterogeneous information from multiple modalities, e.g., vision, sound, text.
         </p>   
         <p>
-          <strong>Part 1. </strong> Focus on providing <strong>better solutions for building Multimodal LLMs</strong>, caring for modality-specific characteristics. For now, we have provided a new PEFT pipeline for MLLMs, ensuring both unimodal and cross-modal adaptation. <a href="https://gewu-lab.github.io/MokA/">[MokA]</a>
+          <strong>Part 1. </strong> Focus on <strong>building Multimodal LLMs by considering the characteristics of diverse multimodal scenarios</strong>. For now, we have provided a new PEFT pipeline for MLLMs, <a href="https://gewu-lab.github.io/MokA/">MokA</a>, which ensures both cross-modal and unimodal adaptation. MokA has been accepted and selected as an ORAL paper by NeurIPS 2025.
+
+
         </p> 
         <p>
           <strong>Part 2. </strong> In the paper presented at CVPR 2022 (ORAL), <strong>introduce the research topic of "Balanced Multimodal Learning"</strong>. Highlight a pervasive issue in multimodal learning, where information utilization of certain modality can be undesirably suppressed by others. Then conduct a series of systematic studies to alleviate this issue, covering empirical observations, algorithms, and theoretical analysis.
@@ -561,7 +566,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Sep. 2025
+                    Updated at October. 2025
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
