--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <!--
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp  -->
-                <a href="https://github.com/echo0409/">GitHub</a> &nbsp/&nbsp
-                <a href="src/cv_yakewei_2025_en.pdf">CV</a> 
+                <a href="https://github.com/echo0409/">GitHub</a> 
+                <!-- <a href="src/cv_yakewei_2025_en.pdf">CV</a>  -->
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
